--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,8 +8,15 @@
                      <a href="{{ link.url }}">{{ link.title }}</a>
                  </li> 
                  {%- endfor -%}
-                 <!-- <li> <a href="https://github.com/brianmaierjr/long-haul" target="_blank">GitHub</a></li> -->
-                 <!-- <li><a href="https://github.com/brianmaierjr/long-haul/archive/master.zip">Download Theme</a></li> -->
+                 {% assign pages_list = site.pages %}
+                 {% for node in pages_list %}
+                 {% if node.title != null %}
+                    {% if node.layout == "category" %}
+                    <li><a class="category-link {% if page.url == node.url %} active{% endif %}"
+                    href="{{ site.baseurl }}{{ node.url }}">{{ node.title }}</a></li>
+                    {% endif %}
+                 {% endif %}
+                 {% endfor %}
              </ul>
          </nav>
      </div>
