--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -1,18 +1,15 @@
 ---
 layout: default
 ---
-<ul class="posts-list">
-  
-  {% assign category = page.category | default: page.title %}
-  {% for post in site.categories[category] %}
-    <li>
-      <h3>
-        <a href="{{ site.baseurl }}{{ post.url }}">
-          {{ post.title }}
-        </a>
-        <small>{{ post.date | date_to_string }}</small>
-      </h3>
-    </li>
-  {% endfor %}
-  
-</ul>
+<div class="home" id="home">
+  <h1 class="pageTitle">Recent Posts</h1>
+  <div class="posts noList">
+    {%- for post in site.categories[category] -%}
+      <article>
+        <span class="date">{{ post.date | date: '%B %d, %Y' }}</span>
+        <h3><a class="post-link" href="{{ post.url }}">{{ post.title }}</a></h3>
+        <p>{%- if post.description -%}{{ post.description }}{%- else -%}{{ post.excerpt | strip_html }}{%- endif -%}</p>
+      </article>
+    {%- endfor -%}
+  </div>
+</div>
