--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -2,8 +2,9 @@
 layout: default
 ---
 <div class="home" id="home">
-  <h1 class="pageTitle">Recent Posts</h1>
-  <div class="posts noList">
+  {% assign category = page.category | default: page.title %}
+  <h1 class="pageTitle">"{{ page.title }}"</h1>
+  <div class="posts noList">    
     {%- for post in site.categories[category] -%}
       <article>
         <span class="date">{{ post.date | date: '%B %d, %Y' }}</span>
