--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,15 +17,7 @@
                     {% endif %}
                  {% endif %}
                  {% endfor %}
-                 <li>
-                    <form action="/search">
-                        <div class="tipue_search_left">
-                          <img src="/assets/tipuesearch/search.png" class="tipue_search_icon">
-                        </div>
-                        <div class="tipue_search_right">
-                          <input type="text" name="q" id="tipue_search_input" pattern=".{1,}" required></div>
-                    </form>
-                 </li>
+                 <li><input id="search-input" type="text" placeholder="Search..." /></li>
              </ul>
          </nav>
      </div>
