--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
                     {% endif %}
                  {% endif %}
                  {% endfor %}
-                 <li><a href="/search/">Search</li>
+                 <li><a href="/search.html">Search</li>
              </ul>
          </nav>
      </div>
