--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,6 +17,7 @@
                     {% endif %}
                  {% endif %}
                  {% endfor %}
+                 <li><a href="/search.html">Search</a></li>
              </ul>
          </nav>
      </div>
